# rust-web-surfer

./: Cargo.toml  README.md  bookmarks.json
src/: main.rs
