[package]
name = "rust-web-surfer"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A CLI tool that allows users to browse the web with features traditionally found in modern browsers, all through the terminal."
readme = "README.md"
documentation = "https://github.com/TwigCoder/rust-web-surfer"
include = ["**/*.rs", "Cargo.toml", "Cargo.lock", "bookmarks.json", "README.md"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
html2text = "0.4"
url = "2.4"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termimad = "0.23"
html5ever = "0.26"
markup5ever_rcdom = "0.2"
